--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,8 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-14.11
+# resolver: lts-14.11   # latest stable
+resolver: nightly-2019-10-23
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
