--- a/TgMeetups.cabal
+++ b/TgMeetups.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: c1e353e6f4ea388c99d298feb601591ec2afa83618aa6c919669ca86b8f7e3c7
+-- hash: 4ed03c7bf0bbbb5667fd4df5c529617a36dca9b502631d66dc34fcf801c6cd34
 
 name:           TgMeetups
 version:        0.1.0.0
@@ -28,12 +28,18 @@ source-repository head
 library
   exposed-modules:
       Lib
+      SampleApi
   other-modules:
       Paths_TgMeetups
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , servant
+    , servant-server
+    , wai
+    , warp
   default-language: Haskell2010
 
 executable TgMeetups-exe
@@ -45,7 +51,12 @@ executable TgMeetups-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       TgMeetups
+    , aeson
     , base >=4.7 && <5
+    , servant
+    , servant-server
+    , wai
+    , warp
   default-language: Haskell2010
 
 test-suite TgMeetups-test
@@ -58,5 +69,10 @@ test-suite TgMeetups-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       TgMeetups
+    , aeson
     , base >=4.7 && <5
+    , servant
+    , servant-server
+    , wai
+    , warp
   default-language: Haskell2010
