--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,11 @@ description:         Please see the README on GitHub at <https://github.com/Gith
 
 dependencies:
 - base >= 4.7 && < 5
+- servant
+- servant-server
+- aeson
+- wai
+- warp
 
 library:
   source-dirs: src
